# 05-chat

./: Cargo.toml  _typos.toml  app.yml  test.rest
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs
chat_server/: Cargo.toml  app.yml
chat_server/fixtures/: test.sql
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  server_time.rs
chat_server/src/models/: chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/tests/: chat.rs
migrations/: 20240426045903_initial.sql  20240429055434_workspace.sql  20240504032504_triggers.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: lib.rs  main.rs  notif.rs  sse.rs
src/: config.rs  main.rs
